Migrate to java 21 Use first and last methods
OpenRewrite