@@ -535,7 +535,7 @@ public class JavaType extends AbstractType<JavaConstructor, JavaMethod, JavaFiel
               if (valueTemplate != null) {
                 JavaMethod m = setter;
                 while (m != null) {
-                  JavaMethodParameter parameter0 = (JavaMethodParameter) m.getRequiredParameters().get(0);
+                  JavaMethodParameter parameter0 = (JavaMethodParameter) m.getRequiredParameters().getFirst();
                   parameter0.setValueTemplate(valueTemplate);
                   m = m.getNextShorterInChain();
                 }
