@@ -77,8 +77,8 @@ public class TimeLine {
       datas.add(keyFrameData);
       fireKeyFrameAdded(keyFrameData);
       checkAddingJoints(keyFrameData);
-    } else if (datas.get(0).getEventTime() > keyFrameData.getEventTime()) {
-      datas.add(0, keyFrameData);
+    } else if (datas.getFirst().getEventTime() > keyFrameData.getEventTime()) {
+      datas.addFirst(keyFrameData);
       fireKeyFrameAdded(keyFrameData);
       checkAddingJoints(keyFrameData);
     } else {
@@ -148,7 +148,7 @@ public class TimeLine {
 
   public void setEndTime(double endTime) {
     if (endTime > 0) {
-      if ((datas.size() == 0) || (endTime > datas.get(datas.size() - 1).getEventTime())) {
+      if ((datas.size() == 0) || (endTime > datas.getLast().getEventTime())) {
         this.endTime = endTime;
         fireEndTimeChanged(endTime);
         if (this.endTime < currentTime) {
@@ -287,7 +287,7 @@ public class TimeLine {
 
   public void refresh() {
     while (!datas.isEmpty()) {
-      removeKeyFrameData(datas.get(0));
+      removeKeyFrameData(datas.getFirst());
     }
     setCurrentTime(0);
     setEndTime(10);
